Fix redirection link in index.html
Updated the meta refresh link for redirection to the Shopee promotions.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
   <!-- ========= REDIRECIONAMENTO ========= -->
 
   <!-- LINK DA SUA COLEÇÃO / AFILIADO SHOPEE -->
-  <meta http-equiv="refresh" content="2; url=COLE_AQUI_O_LINK_DA_SUA_COLECAO_SHOPEE">
+  <meta http-equiv="refresh" content="2;"https://collshp.com/promshopeebr">
 
 </head>
 <body>
   <p>Redirecionando para as promoções...</p>
 </body>
+
 </html>
