Update WhatsApp preview meta tags in index.html
Updated the image and URL meta tags for WhatsApp preview.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <meta property="og:description" content="Ofertas e cupons selecionados especialmente para você. Clique e aproveite!">
 
   <!-- IMAGEM DA PRÉVIA (troque pelo link da sua imagem no GitHub) -->
-  <meta property="og:image" content="COLE_AQUI_O_LINK_DA_IMAGEM">
+  <meta property="og:image" content="https://carlosnegociodigital.github.io/promoshopeebr/pmshee.jpeg">
 
   <!-- LINK QUE VOCÊ COMPARTILHA (link do seu GitHub Pages) -->
-  <meta property="og:url" content="COLE_AQUI_O_LINK_DA_SUA_PAGINA_GITHUB">
+  <meta property="og:url" content="https://carlosnegociodigital.github.io/promoshopeebr/">
 
   <meta property="og:type" content="website">
 
@@ -32,3 +32,4 @@
 </body>
 
 </html>
+
