Fix HTML formatting and redirection meta tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- ========= REDIRECIONAMENTO ========= -->
 
   <!-- LINK DA SUA COLEÇÃO / AFILIADO SHOPEE -->
-  <meta http-equiv="refresh" content="2;"https://collshp.com/promshopeebr">
+  <meta http-equiv="refresh" content="2;https://collshp.com/promshopeebr">
 
 </head>
 <body>
@@ -32,5 +32,6 @@
 </body>
 
 </html>
+
 
 
