Fix image link in index.html for WhatsApp preview
Updated image link in the meta tags for WhatsApp preview.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description" content="Ofertas e cupons selecionados especialmente para você. Clique e aproveite!">
 
   <!-- IMAGEM DA PRÉVIA (troque pelo link da sua imagem no GitHub) -->
-  <meta property="og:image" content="https://carlosnegociodigital.github.io/promoshopeebr/pmshee.webp">
+  <meta property="og:image" content="https://carlosnegociodigital.github.io/promoshopeebr/pmshee.png">
 
   <!-- LINK QUE VOCÊ COMPARTILHA (link do seu GitHub Pages) -->
   <meta property="og:url" content="https://carlosnegociodigital.github.io/promoshopeebr/">
@@ -32,6 +32,7 @@
 </body>
 
 </html>
+
 
 
 
