Add favicon to index.html
Added favicon link to the head section.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 
   <title>Promo Shopee BR</title>
-
+<link rel="icon" type="image/png" href="https://carlosnegociodigital.github.io/promoshopeebr/favicon-16x16.png">
   <!-- ========= PRÉVIA DO WHATSAPP ========= -->
 
   <!-- Título que aparece na prévia -->
@@ -32,6 +32,7 @@
 </body>
 
 </html>
+
 
 
 
