Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta http-equiv="refresh" content="2;https://collshp.com/promshopeebr">
 
 </head>
-
+<body> <p> Indo para Promoções....</p>
 </html>
 
 
